# ipyrdf

./: README.md  setup.cfg  setup.py
ipyrdf/: LICENSE  __init__.py  namespace_wrapper.py  util.py
ipyrdf/ipyrdf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ipyrdf/queries/: __init__.py  summary.py
ipyrdf/rdf_diagram/: __init__.py  describe_tool.py  rdf_diagram.py  rdf_loader.py  turtle_magic.py
ipyrdf/sparql_diagram/: __init__.py  sparql_diagram.py  sparql_magic.py  widget_sparql.py
