# Copyright (c) 2021 ipyrdf contributors.
# Distributed under the terms of the Modified BSD License.

[metadata]
name = ipyrdf
description = Jupyterlab widgets to rdf interactions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jupyrdf/ipyrdf
author = ipyrdf contributors
author_email = dane.freeman@gtri.gatech.edu
license = BSD-3-Clause
keywords =
    widgets
    semantic
    sparql
license_file = LICENSE
classifiers =
    Framework :: IPython
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python

[options]

python_requires = >=3.6

install_requires =
    rdflib >=5

include_package_data = True
zip_safe = False


[options.extras_require]
ld =
    rdflib-jsonld
widget =
    ipyelk >=1.0.0
    ipywidgets >=7.6
    jupyterlab >=3,<4
utest =
    %(ld)s
    %(widget)s
    hypothesis-jsonschema
    pytest-cov
    requests_cache
atest =
    robotframework-seleniumlibrary
docs =
    myst-nb
dev =
    %(atest)s
    %(utest)s
    %(docs)s
    wheel
    twine
    doit


[flake8]
exclude = .git,__pycache__,envs,.ipynb_checkpoints,.mypy_cache
max-line-length = 88
ignore = E203

[tool:pytest]
junit_family=xunit2
addopts =
    -vv
    --ff
    --pyargs ipyrdf
    --cov ipyrdf
    --cov-report term-missing:skip-covered
    --cov-report html:build/htmlcov
    --no-cov-on-fail

[isort]
combine_as_imports = True
include_trailing_comma = True
line_length = 88
multi_line_output = 3

[pycodestyle]
ignore = E203,W503,C0330
max-line-length = 88
